made pointer guide

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="root"></div>
     <div id="ArrayVisualRoot"></div>
+    <div id="PointerGuideRoot"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script>
 
