classes and inheritance

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="root"></div>
     <div id="ArrayVisualRoot"></div>
     <div id="PointerGuideRoot"></div>
+    <div id="ClassGuideRoot"></div>
     <script type="module" src="/src/main.jsx"></script>
     <script>
 
