--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Vite + React</title>
   </head>
   <body>
+    <div id="root"> Project by Selena Ho, Shinji Kusakabe, Kevin Li</div>
     <div id="ArrayVisualRoot"></div>
     <div id="PointerGuideRoot"></div>
     <div id="ClassGuideRoot"></div>
